# hse-ws-csv-reader

./: .gitignore  README.md  meson.build
include/csvreader/: arguments.hpp  columns.hpp  io.hpp  util.hpp
src/: arguments.cpp  columns.cpp  io.cpp  main.cpp
src/util/: join.cpp  split.cpp  string_to_int.cpp
